Modified ASP.NET WebAPI endpoint to send an Email and SMS, Set Startup Projects to multiple to run MVC app and Web API app run at the same time

--- a/AlfarBackendChallenge.WebAPI/AlfarBackendChallenge.WebAPI.csproj
+++ b/AlfarBackendChallenge.WebAPI/AlfarBackendChallenge.WebAPI.csproj
@@ -337,6 +337,8 @@
           <DevelopmentServerPort>14786</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:14786/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:14786/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
